2011-05-18  Teodor Zlatanov  <tzz@lifelogs.com>

	* nntp.el (nntp-send-authinfo): Use the "force" token for NNTP
	authentication with auth-source.

2011-05-17  Glenn Morris  <rgm@gnu.org>

	* gnus-group.el (gnus-import-other-newsrc-file):
	Use insert-file-contents.

2011-05-16  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-sum.el (gnus-summary-hide-all-threads): Add update message every
	1000 iterations.

2011-05-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nntp.el (nntp-open-connection): Check if process-type is available.

2011-05-16  Julien Danjou  <julien@danjou.info>

	* shr.el (shr-tag-del): Add support for del tag.

2011-05-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-html.el (gnus-html-put-image): Register a displayer.

	* shr.el (shr-image-displayer): Don't remove text props from alt text.

2011-05-13  Teodor Zlatanov  <tzz@lifelogs.com>

	* registry.el (prune-factor): New initialization parameter defaulting
	to 0.1.
	(registry-prune-hard): Use it.

	* gnus-registry.el (gnus-registry-fixup-registry): Set prune-factor to
	0.1 expicitly.

2011-05-13  Glenn Morris  <rgm@gnu.org>

	* message.el (message-send-mail-with-sendmail): Assume sendmail-program
	is bound, since this function requires sendmail.

2011-05-11  Teodor Zlatanov  <tzz@lifelogs.com>

	* registry.el (registry-usage-test): Disable pruning test.

2011-05-11  David Engster  <dengste@eml.cc>

	* lpath.el: Bind shr-put-image and process-type for Emacs22 and XEmacs.
	Bind set-network-process-option for XEmacs.

2011-05-10  Teodor Zlatanov  <tzz@lifelogs.com>

	* registry.el (registry-prune-hard-candidates)
	(registry-prune-soft-candidates): Helper methods for registry pruning.
	(registry-prune): Use them.  Make the sort function optional.

2011-05-10  Jim Meyering  <meyering@redhat.com>

	* shr.el (shr-colorize-region): Fix doubled-word typos: on on -> on

2011-05-10  Julien Danjou  <julien@danjou.info>

	* shr.el (shr-put-color-1): Do not bug out when old-props is a face
	symbol and not a list.
