@@ -1,5 +1,9 @@
 2011-05-18  Teodor Zlatanov  <tzz@lifelogs.com>
 
+	* gnus-registry.el (gnus-registry-user-format-function-M): Use `mapconcat'.
+	(gnus-registry-user-format-function-M2): Use to see the full text of
+	the marks.
+
 	* nntp.el (nntp-send-authinfo): Use the "force" token for NNTP
 	authentication with auth-source.
 
